--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -1,18 +1,53 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Usuário</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <ion-header style="background-color: #927f5d;">
+    <img style=" margin-top: 10px; margin-bottom: 10px;text-align: center;margin-left: 35%;width: 95px;" class="img" src="../../assets/logo.png" alt="logo Muda Meu Mundo">
+  </ion-header>
+
+  <div style=" height: 25px;background-color: rgb(50, 102, 50)">
+  <ion-subtitle style="font-family: 'Times New Roman', Times, serif;margin-left:10px; font-size: 10px; text-align:center; color: rgb(207, 250, 206); font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+    A plataforma que ajuda o produtor, a se conectar com o varejo.
+  </ion-subtitle>
+  </div>
+
+  <h1 style="font-size: 30px; margin-top: 30px;text-align: center; font-family: 'Times New Roman', Times, serif; font-weight: bold; color: #fff;">Perfil de Usuário</h1>
+
+   <ion-card style="margin-left: 35%;margin-top: -5px;border-radius: 100px; width: 110px;">
+    <img style="width: 110px" src="../../assets/6634465.png" alt="">
+    </ion-card>
+
+    <ion-card>
+    <ion-list>
+      <ion-item>
+        <ion-label>
+         <h2>Nome: </h2>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+         <h2>E-mail: </h2>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+         <h2>Celular: </h2>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+         <h2>Estado: </h2>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+    </ion-card>
+
   <ion-list *ngIf="products">
     <ion-item *ngFor="let product of products.products">
       <ion-label>
-        <li>
           <span>Produto: {{product.pname}}</span>
-          <span>Quantidade: {{product.pqty}}</span>
-        </li>
       </ion-label>
+      <ion-label>
+        <span>Quantidade: {{product.pqty}}</span>
+    </ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
