--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -18,7 +18,7 @@
 </ion-content>
 <ion-tabs>
   <ion-tab-bar slot="Perfil">
-    <ion-tab-button tab="perfil">
+    <ion-tab-button tab="perfil" (click)="navigateToUserPage()">
       <img style="width: 36px" src="../../assets/icon-5.png" alt="">
       <ion-label>Perfil</ion-label>
     </ion-tab-button>
