--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,7 @@
 
   <div style=" height: 25px;background-color: rgb(50, 102, 50)">
   <ion-subtitle style="margin-left:10px; font-size: 10px; text-align:center; color: rgb(207, 250, 206); font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
-    A plataforma que ajuda o produtor, a se conectar com o varejo.
+    A plataforma que ajuda o produtor a se conectar com o varejo.
   </ion-subtitle>
   </div>
 
@@ -21,7 +21,13 @@
     <img style=" width: 70px; margin-left:36%;margin-top:15px; margin-bottom: -12px;" src="../../assets/icon-4.png" alt="">
     <h2 style="color: white; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:16px; text-align: center; ">Como mostrar que tenho um<br>produto disponível?</h2>
     <h3 style="color: white; font-size:12px; margin-bottom: 15px; margin-right:8px; margin-left: 8px;margin-top: -7px; text-align: center;">É super fácil!! Confere o passo a passo:</h3>
-    <h3 style="color: white; font-size:12px; margin-bottom: 15px; margin-right:8px; margin-left: 8px;margin-top: -7px;">1) Tenha seu cadastro ativo na Muda Meu Mundo<br>2)Vá para a aba de produtos ( é só ir no ícone de plantinha da barra inferior ;) )<br>3) Entre na lista de produtos e veja se o nome do alimento que você tem está lá <br>4) Se o alimento estiver na lista (ex: Abobrinha), selecione-o! Se não estiver na lista (ex: Caqui) é só preencher o primeiro campo com o nome do produto! <br>5) Preencha também a quantidade daquele produto que você possui (ex: 30kg) <br>6) Preencha a data da disponibilidade (ex: 09/06/2022) <br>7) Envie as informações e espere o contato <3 </h3>
+    <h3 style=" text-align: center;color: white; font-size:12px; margin-bottom: 15px; margin-right:8px; margin-left: 8px;margin-top: -7px;">
+      1) Tenha seu cadastro ativo na Muda Meu Mundo<br>
+      2) Vá para a aba de produtos <br> (é só ir no ícone de plantinha da barra inferior ;) )<br>
+      3) Selecione, na lista de produtos, o alimento que você tem disponível (Ex: Cenoura)<br>
+      4) Preencha a quantidade que você tem disponível desse produto (Ex: 8 kilogramas)<br>
+      5) Insira a melhor data para entrega no formato dd/mm/aaaa <br>
+      6) Envie as informações e pronto! <3 </h3>
   </ion-card>
 
   <ion-card style=" box-shadow: rgb(19, 10, 10);border-radius: 15px; background-color: #4c7446b7;">
