--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -5,7 +5,7 @@
 
   <div style=" height: 25px;background-color: rgb(50, 102, 50)">
   <ion-subtitle style="font-family: 'Times New Roman', Times, serif;margin-left:10px; font-size: 10px; text-align:center; color: rgb(207, 250, 206); font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
-    A plataforma que ajuda o produtor, a se conectar com o varejo.
+    A plataforma que ajuda o produtor a se conectar com o varejo.
   </ion-subtitle>
   </div>
 
