--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -14,7 +14,7 @@
         <strong>Bem vindo, agricultor</strong>
        </ion-card-title>
        <ion-card>
-        <div align="justify"> Aqui você poderá cadastrar os produtos disponíveis diariamente na sua produção, aumentando o alcance e as possibilidades de vendas de seus produtos! </div>
+        <div> Aqui você poderá cadastrar os produtos disponíveis diariamente na sua produção, aumentando o alcance e as possibilidades de vendas de seus produtos! </div>
        </ion-card>
      </ion-card-header>
      <ion-card-content>
