--- a/src/app/pages/inicio/inicio.page.scss
+++ b/src/app/pages/inicio/inicio.page.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 ion-content{
     --ion-background-color:rgb(32, 58, 37);
     font-family: Arial, Helvetica, sans-serif;
@@ -28,10 +30,11 @@ ion-card{
  text-align: center;
  background: transparent;
  box-shadow: none;
- font-size: 16px;
+ font-size: 14px;
      color: #D2EDDD;
      font-weight: 500;
      position: relative;
+     font-family: 'Poppins';
      
 }
      
@@ -45,9 +48,10 @@ ion-card{
  
  }
  ion-card-title{
-     font-size: 18px;
+     font-size: 30px;
      color: #D2EDDD;
      font-weight: 500;
+     font-family: 'Caveat';
    
     
 
