--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -6,7 +6,7 @@
 
   <div class="background-pic">
      <div class="background-filter">
-       <div class="shape"><img src="../../assets/shape.png" /></div>
+       <div class="shape"><img src="../../assets/LogoFruits2.png" /></div>
 
        <ion-card>
          <ion-card-header>
