--- a/src/app/pages/registrar/registrar.page.html
+++ b/src/app/pages/registrar/registrar.page.html
@@ -1,15 +1,16 @@
+
 <ion-content>
   <div class="background-pic">
     <div class="background-filter">
-      <div class="shape"><img src="../../assets/shape.svg" /></div>
+      <div class="shape"><img src="../../assets/LogoFruits2.png" /></div>v>
   
       <ion-card>
         <ion-card-header>
           <ion-card-title>
-    Registre-se!
+           Registre-se!
           </ion-card-title>
           <ion-card-subtitle>
-          Crie sua <strong>conta</strong> preenchendo o formulário
+            Crie sua <strong>conta</strong> preenchendo o formulário
           </ion-card-subtitle>
         </ion-card-header>
         <ion-card-content>
