--- a/src/app/pages/esquecisenha/esquecisenha.page.html
+++ b/src/app/pages/esquecisenha/esquecisenha.page.html
@@ -2,8 +2,8 @@
 <ion-content>
   <div class="background-pic">
     <div class="background-filter">
-      <div class="shape"><img src="../../assets/shape.svg" /></div>
-  
+      <div class="shape"><img src="../../assets/LogoFruits2.png" /></div>
+      
       <ion-card>
         <ion-card-header>
           <ion-card-title>
