--- a/src/app/pages/esquecisenha/esquecisenha.page.scss
+++ b/src/app/pages/esquecisenha/esquecisenha.page.scss
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 ion-content{
     --ion-background-color:#fff;
 }
 .background-pic{
     height: 100vh;
     width: 100%;
-    
+    background: url('../../img2/bg.png');
     background-position: 30%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -22,23 +24,27 @@ ion-content{
 .shape{
     position: fixed;
     top:0;
-    right: 0;
 
     img{
+        margin-top: 10px;
+         max-width:120px;
+         max-height:120px;
+         width: auto;
+         height: auto;
         opacity: 0.9;
     }
 }
 
 ion-card{
-    margin-top: 130px;
+    margin-top: 100px;
     background: transparent;
     box-shadow: none;
     text-align: center;
 
     ion-card-title{
         color:#242020;
-        font-size: 30px;
-        font-weight: 400;
+        font-size: 40px;
+        font-family: 'Caveat';
     }
 
     ion-card-subtitle{
@@ -47,10 +53,12 @@ ion-card{
         font-weight: 400; 
         display: inline-block;
         max-width: 140px;
+        font-family: 'Poppins';
         strong{
             font-weight: bold;
             color: #198645;
             font-size: 15;
+            font-family: 'Poppins';
         }
     }
 
@@ -58,7 +66,7 @@ ion-card{
         margin-top: 30px;
 
         ion-item{
-            padding: 10px 0;
+            padding: 120px 0;
             --ion-item-background:transparent;
             --border-width:0;
             --inner-border-width:0;
