--- a/src/app/pages/product/product.page.scss
+++ b/src/app/pages/product/product.page.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 ion-content{
     --ion-background-color:#fff;
@@ -14,6 +16,7 @@ ion-card{
 
     ion-card-title{
         font-size: 15px;
+        font-family: 'Caveat';
     }
 
     ion-card-content{
