--- a/src/app/pages/product/product.page.scss
+++ b/src/app/pages/product/product.page.scss
@@ -15,8 +15,12 @@ ion-card{
     border-radius: 15px;
 
     ion-card-title{
-        font-size: 15px;
+        font-size: 17px;
         font-family: 'Caveat';
+    }
+    ion-subtitle{
+        font-family: 'Poppins';
+        color: #424242;
     }
 
     ion-card-content{
@@ -28,6 +32,7 @@ ion-card{
             --inner-border-width:0;
             --highlight-color-focused:none;
             margin-bottom: 25px;
+            color:#555B5B;
 
             ion-input{
                 width:257px;
