--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -32,8 +32,8 @@
 
   <ion-card style=" box-shadow: rgb(19, 10, 10);border-radius: 15px; background-color: #4c7446b7;">
     <img style=" width: 70px; margin-left:36%;margin-top:15px; margin-bottom: -12px;" src="../../assets/icon-5.png" alt="">
-    <h2 style="color: white; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:16px; text-align: center; ">O que encontro na aba "Perfil"?</h2>
-    <h3 style="color: white; font-size:12px; margin-bottom: 15px; margin-right:8px; margin-left: 8px;margin-top: -7px; text-align: center;">Nessa área do app você encontra suas informações (fornecidas no cadastro), como nome e estado! Lá você também pode conferir as notificações que chegaram. Além de mostrar os produtos que você tem, através desse aplicativo você também consegue receber uma requisição de produto!</h3>
+    <h2 style="color: white; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:16px; text-align: center; ">O que encontro na aba "Requisições"?</h2>
+    <h3 style="color: white; font-size:12px; margin-bottom: 15px; margin-right:8px; margin-left: 8px;margin-top: -7px; text-align: center;">Nessa área do app você encontra as requisições de produtos solicitadas por agrônomos da Muda Meu Mundo! Com isso, você consegue entender as demandas necessárias e fornecer os produtos solicitados!</h3>
   </ion-card>
 
   <ion-card style=" box-shadow: rgb(19, 10, 10);border-radius: 15px; background-color: #ac7524b7;">
