--- a/src/app/pages/product/product.page.scss
+++ b/src/app/pages/product/product.page.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 ion-content{
     --ion-background-color:#fff;
@@ -13,7 +15,12 @@ ion-card{
     border-radius: 15px;
 
     ion-card-title{
-        font-size: 15px;
+        font-size: 17px;
+        font-family: 'Caveat';
+    }
+    ion-subtitle{
+        font-family: 'Poppins';
+        color: #424242;
     }
 
     ion-card-content{
@@ -25,6 +32,7 @@ ion-card{
             --inner-border-width:0;
             --highlight-color-focused:none;
             margin-bottom: 25px;
+            color:#555B5B;
 
             ion-input{
                 width:257px;
@@ -62,4 +70,5 @@ ion-card{
 }
 
 }
+
 
