--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -9,48 +9,26 @@
   </ion-subtitle>
   </div>
 
-  <h1 style="font-size: 30px; margin-top: 30px;text-align: center; font-family: 'Times New Roman', Times, serif; font-weight: bold; color: #fff;">Perfil de Usuário</h1>
+  <h1 style="font-size: 33px; margin-top: 30px;text-align: center; font-family: 'Caveat'; font-weight: bold; color: #fff;">Requisições</h1>
 
    <ion-card style="margin-left: 35%;margin-top: -5px;border-radius: 100px; width: 110px;">
     <img style="width: 110px" src="../../assets/6634465.png" alt="">
     </ion-card>
 
-    <ion-card>
-    <ion-list>
-      <ion-item>
-        <ion-label>
-         <h2>Nome: </h2>
-        </ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>
-         <h2>E-mail: </h2>
-        </ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>
-         <h2>Celular: </h2>
-        </ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>
-         <h2>Estado: </h2>
-        </ion-label>
-      </ion-item>
-    </ion-list>
-    </ion-card>
-
+    <ion-card-content>
+    
   <ion-list *ngIf="products">
     <ion-item *ngFor="let product of products.products">
       <ion-label>
-          <span>Produto: {{product.pname}}</span>
+          <span style="font-size: 14px;">Produto: {{product.pname}}</span> 
       </ion-label>
       <ion-label>
-        <span>Quantidade: {{product.pqty}}</span>
+        <span style="font-size: 14px;">Quantidade: {{product.pqty}}</span>
     </ion-label>
     </ion-item>
   </ion-list>
-</ion-content>
+</ion-card-content>
+
 <ion-tabs>
   <ion-tab-bar slot="Perfil">
     <ion-tab-button tab="perfil" (click)="navigateToUserPage()">
